--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,16 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
-#config spring security
-spring.security.user.name=hoidanit
-spring.security.user.password=123456
-
 #config view engine
 # spring.mvc.view.prefix=/WEB-INF/view/
 # spring.mvc.view.suffix=.jsp
+
+#config session
+spring.session.store-type=jdbc 
+spring.session-timeout=1800 
+spring.session.jdbc.initialize-schema=always
+#server.servlet.session.timeout
+#spring.session.jdbc.table-name=SPRING_SESSION
 
 #default = 1MB
 spring.servlet.multipart.max-file-size=50MB  
